force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/Mogli_SMS__Integrated_Object__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type is used to track which objects are integrated with the package.</description>
    <label>Mogli Integrated Object</label>
    <pluralLabel>Mogli Integrated Objects</pluralLabel>
</CustomObject>