force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Email__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Email__c</fullName>
    <label>Email</label>
    <metadataRelationshipControllingField>Mogli_SMS__Integrated_Object__mdt.Mogli_SMS__Integrated_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Mogli_Integrated_Objects</relationshipLabel>
    <relationshipName>Mogli_Integrated_Objects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>