force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__FirstName__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__FirstName__c</fullName>
    <label>First Name</label>
    <metadataRelationshipControllingField>Mogli_SMS__Integrated_Object__mdt.Mogli_SMS__Integrated_Object__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Mogli_Integrated_Objects</relationshipLabel>
    <relationshipName>Mogli_Integrated_Objects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>