force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Gateway_Priority__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Gateway_Priority__c</fullName>
    <label>Gateway Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>