force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Icon__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Icon__c</fullName>
    <label>Icon</label>
    <length>30</length>
    <type>Text</type>
</CustomField>