force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Integrated_Object__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Integrated_Object__c</fullName>
    <label>Integrated Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Integrated_Objects</relationshipLabel>
    <relationshipName>Integrated_Objects</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>