force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Last_Name__c</fullName>
    <label>(Deprecated) Last Name</label>
    <metadataRelationshipControllingField>Mogli_SMS__Integrated_Object__mdt.Mogli_SMS__Integrated_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Mogli_Integrated_Objects2</relationshipLabel>
    <relationshipName>Mogli_Integrated_Objects2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>