force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Master_Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Master_Relationship_Field__c</fullName>
    <inlineHelpText>Required only if you get an &quot;System.QueryException: No such column &apos;OwnerId&apos; &quot; error.
input here the name of the field that points to the Master object.</inlineHelpText>
    <label>Master Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>