force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Merge_Fields2__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Merge_Fields2__c</fullName>
    <label>Merge Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>