force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Merge_Fields__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Merge_Fields__c</fullName>
    <label>(Deprecated) Merge Fields</label>
    <type>TextArea</type>
</CustomField>