force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Mogli_Display_Field__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Mogli_Display_Field__c</fullName>
    <defaultValue>&apos;Name&apos;</defaultValue>
    <label>Mogli Display Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>