force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__Mogli_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Mogli_Number_Field__c</fullName>
    <label>Mogli Number Field</label>
    <metadataRelationshipControllingField>Mogli_SMS__Integrated_Object__mdt.Mogli_SMS__Integrated_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Integrated_Objects1</relationshipLabel>
    <relationshipName>Integrated_Objects1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>