force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__NavigationPriority__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__NavigationPriority__c</fullName>
    <label>Navigation Priority</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>