force-app/main/default/objects/Mogli_SMS__Integrated_Object__mdt/fields/Mogli_SMS__SMS_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__SMS_Lookup_Field__c</fullName>
    <description>The API Name of the lookup field for the integrated object on the SMS object.</description>
    <label>SMS Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>